# accessshield-india

./: .cursorrules  .env.example  .gitignore  README.md  SESSION_B_SUMMARY.md  TESTING_GUIDE.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/ai-service/: .env.example  Dockerfile  config.py  main.py  package.json  pyproject.toml  requirements.txt
apps/ai-service/app/: main.py
apps/ai-service/data/: is17802.json  wcag22.json
apps/ai-service/db/: __init__.py  session.py
apps/ai-service/middleware/: __init__.py  auth.py  rate_limiter.py
apps/ai-service/scripts/: dev.sh  with-venv.sh
apps/ai-service/services/: __init__.py  alt_text.py  compliance_advisor.py  fix_suggestion.py  statement_generator.py
apps/ai-service/tests/: __init__.py  conftest.py  test_alt_text.py  test_dlp.py  test_fix_suggestion.py  test_health.py
apps/ai-service/utils/: __init__.py  cache.py  claude_client.py  dlp.py
apps/api/: .eslintrc.js  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/certification/: badge-generator.ts  cert.service.ts  routes.ts  types.ts
apps/api/src/config/: env.ts  secrets.ts
apps/api/src/lib/: admin-org-metrics.ts  ai-client.ts  dev-mock-ai.test.ts  dev-mock-ai.ts  logger.ts  plan-limits.ts  problem-details.ts  resolve-claims.ts  slug.ts
apps/web/: .eslintrc.js  middleware.ts  next.config.js  package.json  sanity.config.ts  tailwind.config.js  tsconfig.json  vitest.a11y.config.ts  vitest.config.ts
apps/web/public/: widget.js
apps/web/scripts/: build.sh  dev.sh
apps/web/src/: vitest.d.ts
apps/widget/: .eslintrc.js  esbuild.config.ts  package.json  test.html  tsconfig.json
apps/widget/src/: index.ts  widget.ts
scripts/: dev-stop.sh  seed-sysadmin.sh  set-test-user-claims.sh
(+245 files in other folders)
