[project]
name = "accessshield-ai-service"
version = "1.0.0"
description = "AccessShield India AI microservices - Accessibility Assistant"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "anthropic==0.25.0",
    "redis==5.0.4",
    "sqlalchemy[asyncio]==2.0.38",
    "asyncpg==0.30.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "pillow==11.1.0",
    "prometheus-client==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["services", "utils", "middleware", "db"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
